Add more to readme

--- a/birdgen/conf/templates/bird.conf.j2
+++ b/birdgen/conf/templates/bird.conf.j2
@@ -6,7 +6,7 @@ router id {{ router_id }};
 # Everyone shall announce least specific
 protocol static {
     ipv6;
-    route 2a12:dd47:9000::/36 unreachable;
+    # route 2a12:dd47:9000::/36 unreachable;
 } 
 
 # Check function to see if IRR allows us to originate a prefix
